--- a/OS_Lab09/mainwindow.ui
+++ b/OS_Lab09/mainwindow.ui
@@ -168,7 +168,36 @@
       </property>
      </widget>
     </widget>
-    <widget class="QWidget" name="game_page"/>
+    <widget class="QWidget" name="game_page">
+     <widget class="QGraphicsView" name="game_View">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>30</y>
+        <width>740</width>
+        <height>400</height>
+       </rect>
+      </property>
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>740</width>
+        <height>400</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>740</width>
+        <height>400</height>
+       </size>
+      </property>
+     </widget>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
