widget remove edit flag

--- a/OS_Lab09/mainwindow.ui
+++ b/OS_Lab09/mainwindow.ui
@@ -180,6 +180,9 @@
         <height>500</height>
        </rect>
       </property>
+      <property name="textInteractionFlags">
+       <set>Qt::TextInteractionFlag::TextSelectableByKeyboard|Qt::TextInteractionFlag::TextSelectableByMouse</set>
+      </property>
      </widget>
     </widget>
     <widget class="QWidget" name="game_page">
@@ -223,7 +226,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>23</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
