--- a/OS_Lab09/mainwindow.ui
+++ b/OS_Lab09/mainwindow.ui
@@ -180,6 +180,9 @@
         <height>500</height>
        </rect>
       </property>
+      <property name="cursorWidth">
+       <number>0</number>
+      </property>
       <property name="textInteractionFlags">
        <set>Qt::TextInteractionFlag::TextSelectableByKeyboard|Qt::TextInteractionFlag::TextSelectableByMouse</set>
       </property>
