--- a/OS_Lab09/mainwindow.ui
+++ b/OS_Lab09/mainwindow.ui
@@ -23,14 +23,14 @@
    <widget class="QStackedWidget" name="mw_pages">
     <property name="geometry">
      <rect>
-      <x>-30</x>
-      <y>10</y>
+      <x>0</x>
+      <y>0</y>
       <width>800</width>
       <height>550</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>3</number>
     </property>
     <widget class="QWidget" name="welcome">
      <widget class="QPushButton" name="server_but">
@@ -104,7 +104,7 @@
      <widget class="QPushButton" name="ready_but">
       <property name="geometry">
        <rect>
-        <x>30</x>
+        <x>570</x>
         <y>460</y>
         <width>200</width>
         <height>60</height>
@@ -124,7 +124,7 @@
      <widget class="QGraphicsView" name="placing_View">
       <property name="geometry">
        <rect>
-        <x>60</x>
+        <x>30</x>
         <y>30</y>
         <width>740</width>
         <height>400</height>
@@ -152,7 +152,7 @@
      <widget class="QPushButton" name="random_but">
       <property name="geometry">
        <rect>
-        <x>250</x>
+        <x>30</x>
         <y>460</y>
         <width>200</width>
         <height>60</height>
@@ -197,7 +197,7 @@
      <widget class="QGraphicsView" name="game_View">
       <property name="geometry">
        <rect>
-        <x>60</x>
+        <x>30</x>
         <y>30</y>
         <width>740</width>
         <height>400</height>
@@ -236,7 +236,9 @@
       </property>
       <property name="font">
        <font>
+        <family>Ubuntu</family>
         <pointsize>20</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <property name="text">
@@ -255,7 +257,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>20</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
